# tessera

./: .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  COMPETITORS.md  README.md  mkdocs.yml  pyproject.toml  research-dependency-graphs.md
.github/workflows/: docs.yml  publish.yml
benchmarks/: README.md  bge-base_20260305_063515.csv  bge-base_20260305_065104.csv  bge-base_20260305_065131.csv  bge-base_20260305_065415.csv  bge-small_20260305_064747.csv  bge-small_20260305_064811.csv  bge-small_20260305_065044.csv  coderank_20260305_052646.csv  coderank_20260305_053431.csv  gte-base_20260305_035149.csv  gte-base_20260305_062240.csv  gte-base_20260305_062844.csv  gte-base_20260305_064719.csv  gte-base_20260305_065437.csv  gte-base_20260305_065507.csv  gte-base_20260305_065808.csv  mixed_bge-base_20260306_004754.csv  mixed_bge-small_20260305_133337.csv  mixed_bge-small_20260305_202738.csv  mixed_bge-small_20260305_202944.csv  mixed_bge-small_20260305_203104.csv  mixed_bge-small_20260305_203107.csv  mixed_coderank_20260306_202534.csv  nomic_20260305_033344.csv  nomic_20260305_033410.csv  nomic_20260305_033431.csv  nomic_20260305_033452.csv  nomic_20260305_033708.csv  nomic_20260305_034001.csv  nomic_20260305_034203.csv  nomic_20260305_062210.csv  nomic_20260305_125006.csv  nomic_20260305_125029.csv  nomic_20260305_125051.csv
docs/: TODO.md  benchmark-search-quality.md  benchmarks.md  code-intelligence.md  conditions.md  event-analysis.md  experiment-journal.md  getting-started.md  index.md  indexing.md  multi-project.md  search-advanced.md  search-guide.md  security.md  snippets.md
docs/papers/: 01-graph-augmented-retrieval.md  02-multi-source-search.md  03-agent-retrieval-benchmark.md  04-event-edge-analysis.md  05-embedding-evaluation.md  06-scope-gated-federation.md  README.md
docs/plans/: future-embedding-optimization.md
docs/plans/architecture/: PLAN.md  intake.md  panel-scorecard.md  research-lancedb-alternatives.md  research.md  spec-v1.md  spec-v2.md
docs/plans/phase3-federation/: PLAN.md  intake.md  research.md  spec-v1.md
docs/plans/phase4-document-indexing/: PLAN.md  exec-review-cto.md  intake.md  panel-scorecard.md  research.md  spec-v1.md  spec-v2.md
docs/plans/phase4.5-media-metadata/: PLAN.md  intake.md  research.md  spec-v1.md
docs/plans/phase5-ppr-graph/: PLAN.md  REMEDIATION-PLAN.md  VALIDATION.md  exec-review-cto.md  intake.md  panel-scorecard.md  ppr-threshold-research.md  research.md  spec-v1.md  spec-v2.md  spike-results.md
docs/plans/type-references/: PLAN.md  intake.md  research.md  spec-v1.md
docs/posts/: event-analysis-launch.md
docs/research/: IMPLEMENTATION_QUICK_START.md  RESEARCH_CODE_CHUNKING_2025.md  RESEARCH_SUMMARY.md  embedding-benchmark-results.json  embedding-models-summary.txt  embedding-models-testing-plan.md  embedding-models.md  tessera-model-download-patterns.md  vec-only-benchmark-results.json
docs/stylesheets/: extra.css
scripts/: aggregate_mixed.py  benchmark_all_models.py  benchmark_clean.py  benchmark_cloud.py  benchmark_cross.py  benchmark_csn.py  benchmark_embeddings.py  benchmark_fanout.py  benchmark_mixed.py  benchmark_pm.py  benchmark_quick.py  benchmark_vec_only.py
scripts/benchmark_validation/: README.md  queries_nextjs.py  run.py
src/codemem/: __init__.py  __main__.py  db.py  indexer.py  server.py
src/tessera/: __init__.py  __main__.py  assets.py  auth.py  chunker.py  config.py  db.py  document.py  drift_adapter.py  embeddings.py  exceptions.py  graph.py  hooks.py  ignore.py  indexer.py  markdown_chunker.py  model_profiles.py  parser.py  search.py  server.py
src/tessera/db/: __init__.py  _global.py  _project.py  _utils.py
src/tessera/indexer/: __init__.py  _helpers.py  _pipeline.py
src/tessera/parser/: __init__.py  _base.py  _core.py  _extractors.py  _helpers.py  _patterns.py  _references.py
src/tessera/parser/languages/: __init__.py  _generic.py  go.py  php.py  python.py  ruby.py  swift.py  typescript.py
src/tessera/server/: __init__.py  _app.py  _state.py
src/tessera/server/tools/: __init__.py  _admin.py  _analysis.py  _collections.py  _events.py  _scope.py  _search.py  _symbols.py
tests/: __init__.py  conftest.py  test_assets.py  test_auth.py  test_chunker.py  test_collections_crud.py  test_concurrent_ppr.py  test_cross_file_edges.py  test_db_graph.py  test_document.py  test_drift_adapter.py  test_e2e_tools.py  test_embeddings.py  test_event_edges.py  test_federation.py  test_graph.py  test_ignore.py  test_indexer.py  test_indexer_assets.py  test_monitoring.py  test_parser.py  test_performance_ppr.py  test_phase2_integration.py  test_real_federation.py  test_real_repos.py  test_schema_migration.py  test_search.py  test_search_benchmark.py  test_search_with_ppr.py  test_server.py  test_server_graph.py  test_spike_ppr.py  test_spike_ppr_validation.py  test_validation.py
tests/fixtures/: cross_file_a.py  cross_file_b.py  php_sample.php  python_sample.py  ts_type_impact.ts  typescript_sample.ts
tests/integration/: test_collections_crud.py  test_cross_file_edges.py  test_e2e_tools.py  test_federation.py  test_indexer.py  test_indexer_assets.py  test_phase2_integration.py  test_real_federation.py  test_real_repos.py  test_search_with_ppr.py  test_server.py  test_server_graph.py  test_validation.py
tests/performance/: test_concurrent_ppr.py  test_performance_ppr.py  test_search_benchmark.py  test_spike_ppr_validation.py
tests/spikes/: __init__.py  coherence_spike.py
tests/unit/: test_assets.py  test_auth.py  test_check_session.py  test_chunker.py  test_db_graph.py  test_document.py  test_drift_adapter.py  test_embeddings.py  test_go_extractor.py  test_graph.py  test_hooks.py  test_ignore.py  test_markdown_chunker.py  test_monitoring.py  test_parser.py  test_ruby_extractor.py  test_schema_migration.py  test_search.py  test_swift_extractor.py
