[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tessera"
version = "0.3.0"
description = "Hierarchical, scope-gated codebase indexing and persistent memory system for AI agents"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Daniel Iser", email = "daniel@example.com"}
]

dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-python",
    "faiss-cpu>=1.9",
    "numpy>=2.0",
    "mcp",
    "httpx",
    "pathspec>=0.12",
    "pyyaml",
    "pymupdf4llm",
    "scipy>=1.10",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-php",
]
core-languages = [
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-php",
]
all-languages = ["tree-sitter-language-pack"]

[project.scripts]
tessera = "tessera.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that index real projects (may be slow or require specific setup)",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tessera"]
