[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tessera"
version = "0.5.0"
description = "Hierarchical, scope-gated codebase indexing and persistent memory system for AI agents"
readme = "README.md"
requires-python = ">=3.13"
license = {text = "MIT"}
authors = [
    {name = "Daniel Iser", email = "daniel@example.com"}
]

dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-python",
    "faiss-cpu>=1.9",
    "numpy>=2.0",
    "mcp",
    "httpx",
    "pathspec>=0.12",
    "pyyaml",
    "pymupdf4llm",
    "scipy>=1.10",
    "fastmcp>=2.14,<3",
    "mcp-hmr>=0.0.3.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-php",
    "networkx",
    "ruff",
    "pyright",
]
core-languages = [
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-php",
]
all-languages = ["tree-sitter-language-pack"]

[project.scripts]
tessera = "tessera.__main__:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that index real projects (may be slow or require specific setup)",
    "performance: PPR performance benchmarks with CI gates",
]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]
exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line length (handled by formatter)
    "B010",   # setattr with constant (used in tests)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["tessera"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["src/tessera"]

[tool.hatch.build.targets.wheel]
packages = ["src/tessera"]
