[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tessera-idx"
version = "0.10.1"
description = "Fast code and document search for AI agents via MCP"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Daniel Iser", email = "daniel@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Intended Audience :: Developers",
]

dependencies = [
    "tree-sitter>=0.23",
    "tree-sitter-python",
    "faiss-cpu>=1.9",
    "numpy>=2.0",
    "mcp",
    "httpx",
    "pathspec>=0.12",
    "pyyaml",
    "pymupdf4llm",
    "scipy>=1.10",
    "fastmcp>=2.14,<3",
    "mcp-hmr>=0.0.3.2",
    "async-hooks",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-php",
    "networkx",
    "ruff",
    "pyright",
]
core-languages = [
    "tree-sitter-javascript",
    "tree-sitter-typescript",
    "tree-sitter-php",
]
embed = ["fastembed>=0.4"]
all-languages = ["tree-sitter-language-pack"]
all = ["tessera-idx[embed]", "tessera-idx[core-languages]"]
bench = [
    "datasets>=4.6.1",
    "pyarrow>=23.0.1",
]

[project.urls]
Homepage = "https://github.com/danieliser/tessera"
Repository = "https://github.com/danieliser/tessera"
Changelog = "https://github.com/danieliser/tessera/blob/main/CHANGELOG.md"

[project.scripts]
tessera = "tessera.__main__:main"

[tool.uv.sources]
async-hooks = { path = "../lib/async-hooks" }

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: tests that index real projects (may be slow or require specific setup)",
    "performance: PPR performance benchmarks with CI gates",
]

[tool.ruff]
target-version = "py313"
line-length = 120
src = ["src"]
exclude = ["tests/fixtures"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
]
ignore = [
    "E501",   # line length (handled by formatter)
    "B010",   # setattr with constant (used in tests)
    "SIM108", # ternary operator (readability preference)
]

[tool.ruff.lint.isort]
known-first-party = ["tessera"]

[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "basic"
include = ["src/tessera"]

[tool.hatch.build.targets.wheel]
packages = ["src/tessera"]
